--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,68 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WebsSockets</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<div id="chatControls">
-    <input id="message" placeholder="Type your message">
-    <button id="send">Send</button>
-</div>
-<ul id="userlist"> <!-- Built by JS --> </ul>
-<div id="chat">    <!-- Built by JS --> </div>
-<script src="websocketDemo.js"></script>
-</body>
+<html lang="en">
+  <!--
+      |\__/,|   (`\
+    _.|o o  |_   ) )
+    -(((---(((--------
+    nice code, right?
+  -->
+
+  <head>
+    <title>TSR</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="TSR. Type, send. It's as simple as that. TSR is a simple web app that people can chat and send images into."
+    />
+    <link rel="icon" href="/img/favicon.png" />
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+
+  <body>
+    <div class="center">
+      <div class="centered-div" id="form__box">
+        <!-- Title and Pronounciation of TSR link to repo -->
+        <a
+          href="https://github.com/udu3324/TSR"
+          style="text-decoration: none"
+          target="_blank"
+          ><h1 class="title">TSR</h1></a
+        >
+
+        <a href="https://github.com/udu3324/TSR" target="_blank"
+          ><span class="title-pronounce">
+            \ 'type·send \ <i class="fa-solid fa-keyboard"></i>
+            <i class="fa-solid fa-arrow-pointer"></i>
+            <i class="fa-solid fa-paper-plane"></i></span
+        ></a>
+
+        <!-- Username input with no spellcheck -->
+        <label for="username">Username</label>
+        <input
+          id="username"
+          class="username-join-input"
+          type="text"
+          name="username"
+          maxlength="19"
+          spellcheck="false"
+          required
+        />
+
+        <!-- join button -->
+        <button id="join-button" class="join-btn" aria-label="Join">
+          Join
+        </button>
+      </div>
+    </div>
+
+    <script src="/js/functions.js"></script>
+    <script src="/js/join.js"></script>
+  </body>
 </html>
