--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,9 @@
           ><h1 class="title">TSR</h1></a
         >
 
-        <a href="https://github.com/udu3324/TSR" target="_blank"
+        <a href="https://github.com/afkvido/TSR" target="_blank"
           ><span class="title-pronounce">
-            \ 'type·send \ <i class="fa-solid fa-keyboard"></i>
+            \ type send receive \ <i class="fa-solid fa-keyboard"></i>
             <i class="fa-solid fa-arrow-pointer"></i>
             <i class="fa-solid fa-paper-plane"></i></span
         ></a>
