--- a/public/ban.html
+++ b/public/ban.html
@@ -22,7 +22,7 @@
         <br />
         <h3>How To Solve -</h3>
         <p class="punishment-txt">
-          * Dont be bad and follow the admin rules
+          * Don't be bad and follow the admin rules
           <br />
           * Ask them to be unbanned
         </p>
